# efl-mono-exml

./: ApiDump.Logging.cs  ApiDump.Model.cs  ApiDump.cs  Dumper.cs  Exml.sln  README.md  Test.cs  TestLibrary.cs  TestUtils.cs  meson.build  meson_options.txt
lib/: ApiDump.cs  Exml.ApiDump.cs  Exml.ApiModel.cs  Exml.ListUniqueNameSortableExtension.cs  Exml.Logging.cs  Exml.Validator.cs  Exml.ValidatorModel.cs  Exml.XmlModel.cs  meson.build
src/Exml/: Exml.ApiModel.cs  Exml.csproj
test/: ApiDump.Test.cs  Exml.Validator.Test.cs  TestLibrary.cs  meson.build
test/ExmlTests/: ApiDump.Test.cs  Exml.Validator.Test.cs  ExmlTests.csproj  TestLibrary.cs
test/samples/: hello_valid.xml  invalid_container.xml  invalid_property_value.xml  invalid_xml.xml  nested.xml  non_existent_members.xml  read_only_property.xml  sample_schema.xsd  unknown_widget.xml  valid_nested.xml
